--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "zafarjonovich/yii-translatable": "dev-master",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
-        "shuchkin/simplexlsx": "^1.0"
+        "shuchkin/simplexlsx": "^1.0",
+        "alexantr/yii2-tinymce": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
