--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -1,11 +1,11 @@
 server {
 
   listen 80;
-  root /home/domains/innovatsiyachilar/api/web;
+  root /home/domains/hack4digital-farm/api/web;
 
   index index.php index.html index.htm index.nginx-debian.html;
 
-  server_name api.inno.ustadev.uz;
+  server_name api.farm.ustadev.uz;
 
   location / {
         try_files $uri $uri/ /index.php?$args;
@@ -28,11 +28,11 @@ server {
 server {
 
   listen 80;
-  root /home/domains/innovatsiyachilar/frontend/web;
+  root /home/domains/hack4digital-farm/frontend/web;
 
   index index.php index.html index.htm index.nginx-debian.html;
 
-  server_name inno.ustadev.uz;
+  server_name farm.ustadev.uz;
 
   location / {
         try_files $uri $uri/ /index.php?$args;
@@ -55,11 +55,11 @@ server {
 server {
 
   listen 80;
-  root /home/domains/innovatsiyachilar/backend/web;
+  root /home/domains/hack4digital-farm/backend/web;
 
   index index.php index.html index.htm index.nginx-debian.html;
 
-  server_name admin.inno.ustadev.uz;
+  server_name admin.farm.ustadev.uz;
 
   location / {
     try_files $uri $uri/ /index.php?$args;
