--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
         "shuchkin/simplexlsx": "^1.0",
-        "alexantr/yii2-tinymce": "^1.0"
+        "alexantr/yii2-tinymce": "^1.0",
+        "zafarjonovich/telegram": "^2.6",
+        "ziya/telegram_proxy": "^0.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
